examples/datalog/12_errors/35_divide_by_zero.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_div_zero
Knowledge graph 'test_div_zero' created.
Switched to knowledge graph: test_div_zero
> .kg use test_div_zero
Switched to knowledge graph: test_div_zero
> +nums[(10,), (0,)].
Inserted 2 fact(s) into 'nums'.
> result(X, Y) :- nums(X), Y = 100 / X.
Script error: Query execution failed: Unsafe rule: Atom { relation: "result", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
